--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,3 +41,7 @@
   image-rendering: auto;     /* Avoid pixelation */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Optional: slight depth */
 }
+
+#section-resume-biography-3 {
+  padding-top: 0 !important;
+}
