--- a/layouts/head.html
+++ b/layouts/head.html
@@ -1,3 +1,3 @@
-<link rel="icon" type="image/png" href="{{ "icon.png?v=2" | relURL }}">
+<!-- Force favicon load -->
+<link rel="icon" type="image/png" href="{{ "icon.png?v=3" | relURL }}">
 
-  
